--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,15 +12,47 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.2
   carousel_slider:
+  percent_indicator:
+  flutter_localization: ^0.1.13
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons:
   flutter_lints: ^2.0.0
+
+
+flutter_launcher_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icons/bearing_icon.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/icons/bearing_icon.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/icons/bearing_icon.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/icons/bearing_icon.png"
+
+
 
 flutter:
   uses-material-design: true
 
   assets:
     - assets/images/
+    - assets/icons/
+    - assets/fonts/
+
+  fonts:
+    - family: customArabic
+      fonts:
+        # - asset: assets/fonts/Baloo_Bhaijaan_2_Regular.ttf
+        - asset: assets/fonts/BalooBhaijaan2-SemiBold.ttf
   
